src/test/deca/syntax/valid/lex/Lectureentier.deca
// Description:
//    Programme minimaliste lisant un entier
//
// Resultats:
//      ok
//
// Historique:
//    cree le 01/01/2022


5981654682464666666666666
6173251
1

