src/test/deca/syntax/invalid/lex/FauxString.deca
// Description:
//    Programme minimaliste utilisant un faux string
//
// Resultats:
//   token recognition error at: '"\n\n\n'
//
// Historique:
//    cree le 01/01/2022



"faux comm /" entaire"


